--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
 {% macro displayPitches(pitch_list) %}
     {% for pitch in pitch_list %}
     <div class="row">
@@ -14,4 +14,4 @@
 </div>
     {% endfor %}
 {% endmacro %}
-</div>
+</div> -->
