--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-inverse">
+<!-- <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> -->
       </button>
       <a class="navbar-brand" href="#">Pitch</a>
     </div>
