--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,14 +1,14 @@
-<!-- <nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span> -->
+        <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="#">Pitch</a>
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
+    <!-- <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="{{url_for('main.index')}}">Home</a></li>
         <li class="dropdown">
@@ -37,4 +37,4 @@
       </ul>
     </div>
   </div>
-</nav>
+</nav> -->
