app/templates/navbar.html

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -8,7 +8,7 @@
       </button>
       <a class="navbar-brand" href="#">Pitch</a>
     </div>
-    <!-- <div class="collapse navbar-collapse" id="myNavbar">
+    <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="{{url_for('main.index')}}">Home</a></li>
         <li class="dropdown">
@@ -37,4 +37,4 @@
       </ul>
     </div>
   </div>
-</nav> -->
+</nav>
