--- a/app/templates/pickup.html
+++ b/app/templates/pickup.html
@@ -1,4 +1,4 @@
-{% extends 'base.html'%}
+<!-- {% extends 'base.html'%}
 {% import 'macros.html' as macro%}
 
 
@@ -28,4 +28,4 @@
 
 </div>
 </div>
-{% endblock%}
+{% endblock%} -->
