--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -1,11 +1,11 @@
-<!-- {% extends 'base.html'%}
+{% extends 'base.html'%}
 {% import 'macros.html' as macro%}
 
 
-{% block content %} -->
+{% block content %}
 
 
-<div class="container">
+<!-- <div class="container">
   <div class="row">
 
 
@@ -32,4 +32,4 @@
 </div>
 </div>
 {% endblock%}
-</div>
+</div> -->
