--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 
-<!-- <div class="container">
+<div class="container">
   <div class="row">
 
 
@@ -32,4 +32,4 @@
 </div>
 </div>
 {% endblock%}
-</div> -->
+</div>
